model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp.clang-tidy.loop-label.out.log
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:28360:7: warning: Added loop label VITIS_LOOP_1213_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1213_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:28360:7: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:29334:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:29334:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:29348:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:29348:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:29362:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:29362:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:30961:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:30961:7: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:32946:9: warning: Added loop label VITIS_LOOP_27_1:   [xilinx-label-all-loops]
        for (unsigned i = 0; i < N; i++) {
        ^~~
        VITIS_LOOP_27_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:32946:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:32959:9: warning: Added loop label VITIS_LOOP_40_1:   [xilinx-label-all-loops]
        for (size_t i = 0; i < N; i++) {
        ^~~
        VITIS_LOOP_40_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:32959:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55829:5: warning: Added loop label VITIS_LOOP_265_1:   [xilinx-label-all-loops]
    for (typename std::vector<src_T>::const_iterator i = in_begin; i != in_end; ++i) {
    ^~~
    VITIS_LOOP_265_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55829:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55839:5: warning: Added loop label VITIS_LOOP_275_1:   [xilinx-label-all-loops]
    for (auto i = 0; i < SIZE; i++)
    ^~~
    VITIS_LOOP_275_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55839:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55850:5: warning: Added loop label VITIS_LOOP_286_1:   [xilinx-label-all-loops]
    for (int i = 0; i < SIZE; i++) {
    ^~~
    VITIS_LOOP_286_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55850:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55857:5: warning: Added loop label VITIS_LOOP_293_1:   [xilinx-label-all-loops]
    for (int i = 0; i < SIZE / res_T::size; i++) {
    ^~~
    VITIS_LOOP_293_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55857:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55859:9: warning: Added loop label VITIS_LOOP_295_2:   [xilinx-label-all-loops]
        for (int j = 0; j < res_T::size; j++) {
        ^~~
        VITIS_LOOP_295_2: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55859:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55871:5: warning: Added loop label VITIS_LOOP_307_1:   [xilinx-label-all-loops]
    for (int i = 0; i < SIZE / data_T::size; i++) {
    ^~~
    VITIS_LOOP_307_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55871:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55873:9: warning: Added loop label VITIS_LOOP_309_2:   [xilinx-label-all-loops]
        for (int j = 0; j < data_T::size; j++) {
        ^~~
        VITIS_LOOP_309_2: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55873:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55888:5: warning: Added loop label VITIS_LOOP_324_1:   [xilinx-label-all-loops]
    for (int ii = 0; ii < nrows; ii++) {
    ^~~
    VITIS_LOOP_324_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55888:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55908:5: warning: Added loop label VITIS_LOOP_344_1:   [xilinx-label-all-loops]
    for (int ii = 0; ii < nrows; ii++) {
    ^~~
    VITIS_LOOP_344_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55908:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55909:9: warning: Added loop label VITIS_LOOP_345_2:   [xilinx-label-all-loops]
        for (int jj = 0; jj < ncols; jj++) {
        ^~~
        VITIS_LOOP_345_2: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55909:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55924:5: warning: Added loop label VITIS_LOOP_360_1:   [xilinx-label-all-loops]
    for (int ii = 0; ii < N_IN; ii++) {
    ^~~
    VITIS_LOOP_360_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55924:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55931:5: warning: Added loop label VITIS_LOOP_367_1:   [xilinx-label-all-loops]
    for (int ii = 0; ii < N_IN; ii++) {
    ^~~
    VITIS_LOOP_367_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:55931:5: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:56789:9: error: Resource with core_name: ROM_nP_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=weights core=ROM_nP_BRAM
        ^
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:56863:9: error: Resource with core_name: ROM_nP_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=weights core=ROM_nP_BRAM
        ^
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:56945:9: error: Resource with core_name: ROM_nP_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=weights core=ROM_nP_BRAM
        ^
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:57302:9: warning: Added loop label VITIS_LOOP_67_1:   [xilinx-label-all-loops]
        for (unsigned i = 0; i < __SHIFT_DEPTH__; ++i)
        ^~~
        VITIS_LOOP_67_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:57302:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:57309:9: warning: Added loop label VITIS_LOOP_74_1:   [xilinx-label-all-loops]
        for (unsigned i = 0; i < __SHIFT_DEPTH__; ++i)
        ^~~
        VITIS_LOOP_74_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:57309:9: note: FIX-IT applied suggested code changes
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:57761:5: warning: Added loop label VITIS_LOOP_38_1:   [xilinx-label-all-loops]
    for (unsigned i_out = 0; i_out < CONFIG_T::filt_height * CONFIG_T::filt_width * CONFIG_T::n_chan; i_out++) {
    ^~~
    VITIS_LOOP_38_1: 
/home/coder/sparse/model_conv_npart1/model_test_prj/solution1/.autopilot/db/model_test.pp.0.cpp:57761:5: note: FIX-IT applied suggested code changes
